SunSkycodepkg/objects/SunSky_Requirement__c.object
<CustomObject>
    <description>Requirements are used to track customer requirements as part of a SFDC initiative.  Requirements may have multiple build components associated with them.</description>
    <fields>
        <fullName>CoveredInDesign__c</fullName>
        <description>Indicate if the requirement is covered in the solution design.</description>
        <label>Covered In Design</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Doc_Mapping_Reference__c</fullName>
        <description>The section within the design document that refers to this requirement.</description>
        <label>Design Doc Mapping Reference</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Type__c</fullName>
        <description>The functional area related to this requirement: user, business, data, workflow, integration, etc.</description>
        <label>Functional Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Entity Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Functional Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Requirement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>User Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional/ Globalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>The level of effort required to build the solution for the requirement.</description>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>The project related to the requirement.</description>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who identified the requirement.</description>
        <label>Raised By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raised_On_Date__c</fullName>
        <description>The date the requirement was identified.</description>
        <label>Raised On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_Comments__c</fullName>
        <description>Comments raised related to the requirement.</description>
        <label>Requirement Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>A detailed description of the requirement.</description>
        <label>Requirement Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Priority__c</fullName>
        <description>Rate the requirement against the other requirements identified.  This rating will help to group requirements into build phases and release management, as well as if identified as out of scope, to drive change order management.</description>
        <label>Requirement Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_Questions__c</fullName>
        <description>Questions raised related to the requirement.</description>
        <label>Requirement Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Status__c</fullName>
        <description>The status of the requirement: new, reviewed, approved, completed, etc.</description>
        <label>Requirement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Indicate if the requirement is considered in scope or out-of-scope.</description>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>In Scope (As-Is)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Out-of-Scope (deferred)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Scope (Manual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Scope (Automated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <description>The type of solution to satisfy the requirement: out of the box, custom development, third party app, etc.</description>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of the Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner-Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Build_Component__c</fullName>
        <description>The number of build components related to the requirement.</description>
        <label>Total Build Component</label>
        <summaryForeignKey>SunSky_Build_Component__c.SunSky_Requirement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Est_Hours_Functional__c</fullName>
        <description>The total estimated functional hours required of the build component(s) required to satisfy the requirement.</description>
        <label>Total Est Hours-Functional</label>
        <summarizedField>SunSky_Build_Component__c.Est_Hours_Functional__c</summarizedField>
        <summaryForeignKey>SunSky_Build_Component__c.SunSky_Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Est_Hours_Technical__c</fullName>
        <description>The total estimated technical hours required of the build component(s) required to satisfy the requirement.</description>
        <label>Total Est Hours- Technical</label>
        <summarizedField>SunSky_Build_Component__c.Est_Hours_Technical__c</summarizedField>
        <summaryForeignKey>SunSky_Build_Component__c.SunSky_Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Test_Case__c</fullName>
        <description>The total number of test cases related to the requirement.</description>
        <label>Total Test Case</label>
        <summaryForeignKey>SunSky_Test_Case__c.SunSky_Requirement_Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Tool Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Functional_Type__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Requirement_Status__c</columns>
        <columns>Solution_Type__c</columns>
        <columns>Requirement_Priority__c</columns>
        <columns>Scope__c</columns>
        <columns>Total_Build_Component__c</columns>
        <columns>Level_of_Effort__c</columns>
        <columns>Raised_By_Contact__c</columns>
        <columns>Raised_On_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{000000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>